[package]
name = "pcap_wasm"
version = "0.0.0"
edition = "2021"
targets = [{ name = "pcap_wasm", path = "rs_lib/lib.rs"}]

[lib]
path = "rs_lib/lib.rs"
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
pcap_core = { version="0.1.0", path = "../pcap_core" }
serde = { version = "1.0.198", features = ["derive"] }
serde-wasm-bindgen = "0.6.2"
wasm-bindgen = "0.2.82"
